[tool.poetry]
name = "zelt"
version = "1.2.4"
description = "Zalando end-to-end load tester"
authors = [
    "Brian Maher <brian.maher@zalando.de>",
    "Oliwia Zaremba <oliwia.zaremba@zalando.de>",
    "Thibaut Le Page <thibaut.le.page@zalando.de>"
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/zalando-incubator/zelt"
repository = "https://github.com/zalando-incubator/zelt"
keywords = ["load testing", "locust", "kubernetes"]
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Testing :: Traffic Generation",
    "Topic :: Internet :: WWW/HTTP",
]
packages = [{include = "zelt"}, { include = "main.py"}]

[tool.poetry.dependencies]
python = "^3.6"
har-transformer = "^1.0"
kubernetes = "^8.0"
locustio = "^0.9.0"
boto3 = "^1.9"
greenlet = "^0.4.15"
tenacity = "^5.0"
docopt = "^0.6.2"
pyyaml = "^5.1"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.6"
pytest = "^4.3"
pylint = "^2.3"
pytest-watch = "^4.2"

[tool.poetry.scripts]
zelt = "main:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
